[metadata]
name = relay
version = attr: relay.__version__
description = Generic LitePub relay (works with all LitePub consumers and Mastodon)
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://git.pleroma.social/pleroma/relay
license = AGPLv3
license_file = LICENSE
classifiers =
    Environment :: Console
    License :: OSI Approved :: AGPLv3 License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://git.pleroma.social/pleroma/relay
    Tracker = https://git.pleroma.social/pleroma/relay/-/issues

[options]
zip_safe = False
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.7

[options.extras_require]
dev =
	pyinstaller >= 5.6.0

[options.entry_points]
console_scripts = 
    activityrelay = relay.manage:main
    
